# transcript

./: .gitignore  LICENSE  README.md  pyproject.toml  start_alpha.bat  start_dev.bat  start_dev2.bat
app/: README.md  main.py  process_uploads.py  transcribe.py
app/static/components/: footer.html  navbar.html
app/static/css/: main.css
app/static/js/: form_resubmit.js  html_loader.js
app/templates/: index.html
app/transcribers/: transcriber.py  vosk_transcriber.py  whisper_transcriber.py
doc/: windows_start.md
docker_images/alpha/: Dockerfile
docker_images/dev/: Dockerfile
docker_images/dev2/: Dockerfile
util/: alpha_bash.bat  dev2_bash.bat  dev_bash.bat  poetry_clean.sh  serve_local.sh
