[tool.poetry]
name = "transcript"
version = "0.1.0"
description = ""
authors = ["Justin Kleiber <jkleiber8@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
paddlepaddle = "^2.5.1"
flask = "^2.3.2"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"